# cr5_assembly_team

./: .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  requirements.txt  run_demo.py
app/: __init__.py  dashboard.py  main_app.py
configs/: five_cr5a_scene_audit_baseline.json  points.yaml  product_types.yaml  robots.yaml  scheduler.yaml
docs/: CR5_SESSION_MEMORY_2026-07-15.md  FOUR_SCHEME_FAULT_COMPARISON.md  Five_CR5A_Cell_Control_Interface.md  Five_CR5A_Cell_Full_Process_ROS2_Joint_Guide.md  INTERFACES.md  MODULE_INTEGRATION.md  PROJECT_PLAN.md  QUICK_START.md  R4_QUALITY_SORTING.md  README_最终脚本使用步骤.md  ROBOT_CONTROL_USAGE.md  SCENE_BUILDING_GUIDE.md  SCENE_CHANGE_REQUEST_2026-07-18.md  SCENE_OBJECTS_REFERENCE.md  SETUP_GUIDE.md  TEAM_WORKFLOW.md  WORKSPACE_DESIGN.md
github_upload_ready_4_scheduler_20260719/: README_上传说明.md
interfaces/: __init__.py  order_interface.py  robot_interface.py  scheduler_interface.py  sim_interface.py  types.py
mock/: __init__.py  mock_order_parser.py  mock_robot_executor.py  mock_scheduler.py  mock_sim_bridge.py
models/: cr12_robot_fixed.urdf  cr5_robot_fixed.urdf
robot_control/: FIVE_ARM_COORDINATOR.md  R1_EXECUTOR.md  R2_EXECUTOR.md  R3_EXECUTOR.md  R4_EXECUTOR.md  R5_EXECUTOR.md  __init__.py  five_arm_coordinator.py  gripper_control.py  integrated_executor.py  motion_control.py  motion_timing.py  r1_motion.py  r2_motion.py  r3_motion.py  r4_motion.py  r5_motion.py  repeat_r4_acceptance.py  robot_executor.py  run_five_arm_cycle.py  run_r1_task.py  run_r2_task.py  run_r3_task.py  run_r4_task.py  run_r5_task.py  runtime_cartesian.py  screw_control.py
scenes/: Create_Direct_Visible_EndEffectors_R1R3R5Wide_ConnectedJaw_R4fixed.lua  OneClick_Adjust_Tables_Closer.lua  Product_Stage_Controller_60.lua  Product_Stage_Controller_60_ColorCycle_V4_CloserTables.lua  ROS2_CompactCell_Bridge_V2_GlobalCallbacks.lua  ROS2_CompactCell_Bridge_V3_ColorCycle.lua  ROS2_Joint_Jog_Controller_R1_R5.lua  Step01_Create_Clean_Cell_60_CloserTables_ColorReady.lua  (+9 more)
src/my_cr5_control/: .cursorrules  .gitignore  CMakeLists.txt  PROJECT_MEMORY.md  README.md  package.xml
src/my_cr5_control/config/guide_model_schema/: feature_profiles.csv  targets.csv
src/my_cr5_control/config/rviz/: heuristic_guided_visual_debug.rviz  paper_mainline_demo.rviz  synthetic_guidance_demo.rviz
src/my_cr5_control/docs/: COMMANDS.md  PAPER_MAINLINE_MAP.md  PROJECT_LAYOUT.md  README.md
src/my_cr5_control/docs/analysis/: HEURISTIC_GUIDED_POSTFIX_FORMAL_RERUN_20260324_ANALYSIS.md  README.md  SIMPLE_BENCHMARK_20260311_101849_ANALYSIS.md  V2_BENCHMARK_20260311_120357_ANALYSIS.md  V2_BENCHMARK_20260317_142203_372_ANALYSIS.md
src/my_cr5_control/docs/guides/: BENCHMARK_DATASET_GUIDE.md  BOX_FEATURE_VISUALIZATION.md  DATA_STORAGE_GUIDE.md  GUI_README.md  HEURISTIC_GUIDED_SAMPLING_INTERFACE.md  MEASUREMENT_POINT_GENERATION.md  PISTON_SPRAY_COMMANDS.md  PISTON_SPRAY_GUI_GUIDE.md  RANDOM_TASK_DATASET_GUIDE.md  README.md  SIMPLE_BOX_TEST_GUIDE.md  SIMPLE_PLOT_DATA_GUIDE.md  V2_HERO_SCENE_DESIGN.md
src/my_cr5_control/docs/roadmap/: Q2_PAPER_CHINESE_DRAFT_SKELETON.md  Q2_PAPER_CHINESE_DRAFT_V1.md  Q2_PAPER_METHOD_RESULTS_SKELETON.md  Q2_PAPER_ROADMAP.md  README.md
src/my_cr5_control/include/my_cr5_control/: cr5_gui_window.hpp  cr5_robot.hpp  env_utils.hpp  measurement_point_generator.hpp  piston_spray_execution.hpp  piston_spray_gui_window.hpp  piston_spray_planner.hpp  planner_selection_utils.hpp  probe_params.hpp  result_utils.hpp  scene_utils.hpp
src/my_cr5_control/include/my_cr5_control/paper_mainline/: guide_bridge.hpp  guide_geometry.hpp  guide_policy_params.hpp  guide_types.hpp  v2_measurement_pose.hpp  v2_scenario_profile.hpp
src/my_cr5_control/launch/: cr5_moveit_stable_demo.launch.py  experimental_task_space_rrtstar_demo.launch.py  guide_experiment.launch.py  heuristic_guided_visual_debug.launch.py  paper_mainline_demo.launch.py  piston_spray_real_robot.launch.py  planner_benchmark.launch.py  run_cr5_planner.launch.py  synthetic_guidance_demo.launch.py
src/my_cr5_control/scripts/benchmarks/: analyze_heuristic_gate_activity.py  analyze_heuristic_rescue_candidates.py  collect_benchmark_dataset.py  export_benchmark_dataset.py  plot_q2_paper_figures.py  plot_simple_benchmark.py  plot_submission_figures.py  run_unified_formal_rerun.py  test_bitstar.py
src/my_cr5_control/scripts/datasets/: analyze_simple_random_dataset.py  plot_simple_random_dataset.py
src/my_cr5_control/scripts/maintenance/: build_dataset_manifest.py  generate_v2_hero_mesh.py  repair_simple_random_dataset_metrics.py
src/my_cr5_control/scripts/models/: analyze_guide_ablation_trace.py  evaluate_baseline_model.py  evaluate_oracle_planner_model.py  evaluate_planner_selection.py  guide_model_schema.py  model_pipeline_common.py  prepare_oracle_planner_dataset.py  prepare_training_table.py  prepare_triggered_guide_dataset.py  train_baseline_model.py  train_difficulty_classifier.py  train_difficulty_classifier_v2.py  train_guide_ranking_model.py  train_oracle_planner_model.py
src/my_cr5_control/scripts/operations/: animate_rrtstar_connect.py
src/my_cr5_control/scripts/paper/: build_springer_word.py  compute_tail_statistics.py
src/my_cr5_control/src/benchmarks/: guide_ranking_simple_experiment.cpp  planner_comparison.cpp  planner_comparison_simple.cpp  planner_comparison_v2.cpp  random_task_dataset_simple.cpp
src/my_cr5_control/src/core/: cr5_robot.cpp  measurement_point_generator.cpp  piston_spray_execution.cpp  piston_spray_planner.cpp
src/my_cr5_control/src/gui/: cr5_gui_main.cpp  cr5_gui_window.cpp  piston_spray_gui_main.cpp  piston_spray_gui_window.cpp
src/my_cr5_control/src/meshes/: ws119_v2_hero_offset_throat.stl  ws119_v2_hero_offset_throat_cutaway.stl
src/my_cr5_control/src/operations/: cr5_box_tester.cpp  cr5_planner.cpp
src/my_cr5_control/src/tools/: cr5_experimental_task_space_rrtstar_demo.cpp  heuristic_guided_visual_debug.cpp  inspect_box_features.cpp  inspect_v2_scenarios.cpp  synthetic_guidance_demo.cpp  test_rrtstar_connect_reproduction.cpp  visualize_box_features.cpp
(+150 files in other folders)
